fix .stat flex  gap

--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ h1 span {
   margin-top: 4.5rem;
 }
 
+.stat {
+  display: flex;
+  flex-direction: column;
+  gap: 0.125rem;
+}
+
 .numbers {
   font-size: 1.5rem;
   font-weight: var(--fw-bold);
